@@ -244,6 +244,7 @@ protected:
   wxSpinCtrl *m_bitmapScale;
   wxCheckBox *m_fixReorderedIndices;
   wxCheckBox *m_incrementalSearch;
+  wxCheckBox *m_notifyIfIdle;
   wxChoice *m_showUserDefinedLabels;
   wxButton *m_getFont;
   wxButton *m_getStyleFont;
